@@ -403,6 +403,8 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
   on discussion pages with vector as default skin
 * (bug 24833) Files name in includes/diff/ are now less confusing
 * (bug 25713) SpecialPage::resolveAlias() now normalise spaces to underscores
+* (bug 25829) Special:Mypage and Special:Mytalk now forward oldid, diff and dir
+  parameters
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
